# thread_pool

./: .gitignore  CMakeLists.txt  README.md  thread_pool.cpp  thread_pool.hpp
example/multi-thread_computing/: .gitignore  CMakeLists.txt  main.cpp
example/multi-thread_computing/include/: segment_computing.hpp
example/multi-thread_computing/src/: segment_computing.cpp
include/: thread_pool.hpp
src/: thread_pool.cpp  worker_thread.cpp
